# genesis

./: .gitignore  README.md  data.xlsx  genesis.py  pyproject.toml
