[tool.poetry]
name = "genesis"
version = "0.1.0"
description = ""
authors = ["Jan Caron"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
typer = "^0.12.3"
pandas = "^2.2.2"
structlog = "^24.4.0"
rich = "^13.7.1"
openpyxl = "^3.1.5"
matplotlib = "^3.9.0"
pyqt6 = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
